# CMakeList.txt : CMake project for MyFirstProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (MyFirstProject "MyFirstProject.cpp" "MyFirstProject.h")

# TODO: Add tests and install targets if needed.
